--- a/index.html
+++ b/index.html
@@ -7,20 +7,14 @@
     <title>Andrew, Web Guy</title>
   </head>
   <body>
-    <header class="bg-blue-500 text-white p-4">
-      <h1 class="text-2xl">Welcome to my project!</h1>
-    </header>
-    <main class="p-4">
-      <p class="text-gray-800">
-        This is a simple example of how to use Tailwind CSS in your project.
-      </p>
-      <div class="bg-gray-300 p-4 rounded-lg">
-        <button class="bg-green-500 text-white p-2 rounded-lg hover:bg-green-600">Click me</button>
+    <div class="grid grid-cols-2">
+      <div class="bg-slate-500 h-screen"></div>
+      <div class="bg-stone-50 h-screen flex">
+        <div class="bg-sky-500 m-auto">
+          Me
+        </div>
       </div>
-    </main>
-    <footer class="bg-blue-500 text-white p-4">
-      <p>Copyright ©2022 My Project</p>
-    </footer>
+    </div>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
