--- a/index.html
+++ b/index.html
@@ -42,7 +42,14 @@
       </div>
 
       <!-- Arcade -->
-      <div class="w-screen bg-slate-500 grow md:h-screen md:w-1/2"></div>
+      <div class="arcade w-screen bg-slate-500 grow text-zinc-100 md:h-screen md:w-1/2 flex">
+        <svg 
+          xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" 
+          id="player"
+          class="w-6 h-6 m-auto -rotate-90 transition-transform origin-center duration-500">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M5.25 5.653c0-.856.917-1.398 1.667-.986l11.54 6.348a1.125 1.125 0 010 1.971l-11.54 6.347a1.125 1.125 0 01-1.667-.985V5.653z" />
+        </svg>
+      </div>
 
     </div>
     <script type="module" src="/main.js"></script>
