--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
         </div>
       </div>
 
+      <!-- Portfolio
+      <div class="w-screen bg-cyan-100 flex md:order-last md:h-screen md:w-1/2">
+      
+      </div> -->
+
       <!-- Arcade -->
       <div class="arcade w-screen bg-slate-500 grow text-zinc-100 md:h-screen md:w-1/2 flex">
         <svg 
@@ -52,6 +57,7 @@
       </div>
 
     </div>
+
     <script type="module" src="/main.js"></script>
   </body>
 </html>
