Structure of portfolio

--- a/index.html
+++ b/index.html
@@ -21,52 +21,47 @@
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
 
-    <div class="flex flex-col h-screen md:flex-row">
+    <div class="flex flex-col min-h-screen md:flex-row">
       
       <!-- Colophon -->
-      <div id="colophon" class="w-screen bg-stone-50 flex md:order-last md:h-screen md:w-1/2">
-        <div class="m-auto p-8">
-          <img class="rounded-full w-20 h-20 ring-2 ring-indigo-400" src="/src/assets/headshot-cropped.jpg">
-          <div class="mt-1">
-            <h1 class="text-3xl font-extrabold text-slate-900 tracking-tight font-sans">
-              Andrew Church
-            </h1>
-            <p class="text-base text-slate-700">
-              Full Stack Developer. Development Manager. Web Problem Solver.
-            </p>
-            <ul class="flex items-center space-x-2 mt-2 text-xs text-indigo-600">
-              <li>
-                <a href="https://www.linkedin.com/in/andrewthewebguy/" class="transition-colors hover:text-indigo-400">
-                  LinkedIn
-                </a>
-              </li>
-              <li>
-                <a href="https://github.com/andrewchurch" class="transition-colors hover:text-indigo-400">
-                  GitHub
-                </a>
-              </li>
-              <li>
-                <a href="mailto:andrewchurch@gmail.com" class="transition-colors hover:text-indigo-400">
-                  andrewchurch@gmail.com
-                </a>
-              </li>
-            </ul>
+      <div id="colophon" class="w-screen bg-stone-50 md:min-h-screen md:order-last md:w-1/2">
+        <div class="flex md:h-screen md:fixed md:w-1/2">
+          <div class="m-auto p-8 ">
+            <img class="rounded-full w-20 h-20 ring-2 ring-indigo-400" src="/src/assets/headshot-cropped.jpg">
+            <div class="mt-1">
+              <h1 class="text-3xl font-extrabold text-slate-900 tracking-tight font-sans">
+                Andrew Church
+              </h1>
+              <p class="text-base text-slate-700">
+                Full Stack Developer. Development Manager. Web Problem Solver.
+              </p>
+              <ul class="flex items-center space-x-2 mt-2 text-xs text-indigo-600">
+                <li>
+                  <a href="https://www.linkedin.com/in/andrewthewebguy/" class="transition-colors hover:text-indigo-400">
+                    LinkedIn
+                  </a>
+                </li>
+                <li>
+                  <a href="https://github.com/andrewchurch" class="transition-colors hover:text-indigo-400">
+                    GitHub
+                  </a>
+                </li>
+                <li>
+                  <a href="mailto:andrewchurch@gmail.com" class="transition-colors hover:text-indigo-400">
+                    andrewchurch@gmail.com
+                  </a>
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
 
-      <!-- Portfolio
-      <div id="portfolio" class="w-screen bg-cyan-100 flex md:order-last md:h-screen md:w-1/2">
-        <div class="p-8 w-full">
-          <h2 class="text-3xl font-extrabold text-slate-900 tracking-tight font-sans">
-            Portfolio
-          </h2>
+      <!-- Portfolio -->
+      <div id="portfolio" class="w-screen bg-cyan-100 flex md:order-last md:min-h-screen md:w-1/2"></div> 
 
-        </div>
-      </div> -->
-
-      <!-- Arcade -->
-      <div id="arcade" class="arcade w-screen bg-slate-500 grow text-zinc-100 md:h-screen md:w-1/2 flex"></div>
+      <!-- Arcade
+      <div id="arcade" class="arcade w-screen bg-slate-500 grow text-zinc-100 md:h-screen md:w-1/2 flex"></div> -->
 
     </div>
 
