--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="flex flex-col min-h-screen md:flex-row">
       
       <!-- Colophon -->
-      <div id="colophon" class="w-screen bg-stone-50 md:min-h-screen md:order-last md:w-1/2">
+      <div id="colophon" class="w-screen md:min-h-screen md:order-last md:w-1/2">
         <div class="flex md:h-screen md:fixed md:w-1/2">
           <div class="m-auto p-8">
             <img class="rounded-full w-20 h-20 ring-2 ring-indigo-400" src="/src/assets/headshot-cropped.jpg">
@@ -58,7 +58,7 @@
       </div>
 
       <!-- Portfolio -->
-      <div id="portfolio" class="w-screen bg-sky-50 flex md:order-last md:min-h-screen md:w-1/2"></div> 
+      <div id="portfolio" class="w-screen bg-gray-100 flex md:order-last md:min-h-screen md:w-1/2"></div> 
 
       <!-- Arcade
       <div id="arcade" class="arcade w-screen bg-slate-500 grow text-zinc-100 md:h-screen md:w-1/2 flex"></div> -->
