--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <!-- Colophon -->
       <div id="colophon" class="w-screen md:min-h-screen md:order-last md:w-1/2">
         <div class="flex md:h-screen md:fixed md:w-1/2">
-          <div class="m-auto p-8">
+          <div class="m-auto mb-0 w-full max-w-xl p-8 md:py-16">
             <img class="rounded-full w-20 h-20 ring-2 ring-indigo-400" src="/src/assets/headshot-cropped.jpg">
             <div class="mt-1">
               <h1 class="text-3xl font-extrabold text-slate-900 tracking-tight">
@@ -58,10 +58,10 @@
       </div>
 
       <!-- Portfolio -->
-      <div id="portfolio" class="w-screen bg-gray-100 flex md:order-last md:min-h-screen md:w-1/2"></div> 
+      <div id="portfolio" class="w-screen bg-gray-100 grow flex md:order-last md:min-h-screen md:w-1/2"></div> 
 
       <!-- Arcade
-      <div id="arcade" class="arcade w-screen bg-slate-500 grow text-zinc-100 md:h-screen md:w-1/2 flex"></div> -->
+      <div id="arcade" class="w-screen bg-slate-500 grow text-zinc-100 md:h-screen md:w-1/2 flex"></div> -->
 
     </div>
 
