Adding external link icons

--- a/index.html
+++ b/index.html
@@ -37,18 +37,18 @@
               </p>
               <ul class="flex items-center space-x-2 mt-2 text-xs text-indigo-600">
                 <li>
-                  <a href="https://www.linkedin.com/in/andrewthewebguy/" class="transition-colors hover:text-indigo-400">
+                  <a href="https://www.linkedin.com/in/andrewthewebguy/" class="after:content-['_↗'] transition-colors hover:text-indigo-400">
                     LinkedIn
                   </a>
                 </li>
                 <li>
-                  <a href="https://github.com/andrewchurch" class="transition-colors hover:text-indigo-400">
+                  <a href="https://github.com/andrewchurch" class="after:content-['_↗'] transition-colors hover:text-indigo-400">
                     GitHub
                   </a>
                 </li>
                 <li>
                   <a href="mailto:andrewchurch@gmail.com" class="transition-colors hover:text-indigo-400">
-                    andrewchurch@gmail.com
+                    andrewchurch@gmail.com                           
                   </a>
                 </li>
               </ul>
