--- a/index.html
+++ b/index.html
@@ -21,47 +21,71 @@
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
 
-    <div class="flex flex-col min-h-screen md:flex-row">
+    <nav class="hidden fixed w-full p-8 z-10 md:block">
+      <ul class="flex transition-colors text-indigo-600 hover:text-indigo-400">
+        <li>
+          <a href="#fun">
+            <svg class="inline w-6 h-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+              <path stroke-linecap="round" stroke-linejoin="round" d="M10.5 19.5L3 12m0 0l7.5-7.5M3 12h18" />
+            </svg>&nbsp;<span class="text-xs">fun</span>
+          </a>
+        </li>
+        <li class="hidden ml-auto">
+          <a href="#work">
+            <svg class="w-6 h-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+              <path stroke-linecap="round" stroke-linejoin="round" d="M13.5 4.5L21 12m0 0l-7.5 7.5M21 12H3" />
+            </svg>            
+          </a>
+        </li>
+      </ul>
+    </nav>
+
+    <div class="md:overflow-x-clip">
       
-      <!-- Colophon -->
-      <div id="colophon" class="w-screen md:min-h-screen md:order-last md:w-1/2">
-        <div class="flex md:h-screen md:fixed md:w-1/2">
-          <div class="m-auto mb-0 w-full max-w-xl p-8 md:py-16">
-            <img class="rounded-full w-20 h-20 ring-2 ring-indigo-400" src="/src/assets/headshot-cropped.jpg">
-            <div class="mt-1">
-              <h1 class="text-3xl font-extrabold text-slate-900 tracking-tight">
-                Andrew Church
-              </h1>
-              <p class="text-base text-slate-700">
-                Full Stack Developer. Development Manager. Web Problem Solver.
-              </p>
-              <ul class="flex items-center space-x-2 mt-2 text-xs text-indigo-600">
-                <li>
-                  <a href="https://www.linkedin.com/in/andrewthewebguy/" class="after:content-['_↗'] transition-colors hover:text-indigo-400">
-                    LinkedIn
-                  </a>
-                </li>
-                <li>
-                  <a href="https://github.com/andrewchurch" class="after:content-['_↗'] transition-colors hover:text-indigo-400">
-                    GitHub
-                  </a>
-                </li>
-                <li>
-                  <a href="mailto:andrewchurch@gmail.com" class="transition-colors hover:text-indigo-400">
-                    andrewchurch@gmail.com                           
-                  </a>
-                </li>
-              </ul>
+      <!-- Panel Container -->
+      <div class="grid grid-rows-[auto,auto,minmax(25vh,1fr)] min-h-screen md:grid-rows-none md:transition-transform md:-translate-x-1/3 md:grid-cols-3 md:w-[150%]">
+
+        <!-- Colophon Panel -->
+        <div id="colophon" class="relative min-content">
+          <div class="flex md:sticky md:h-screen md:top-0">
+            <div class="m-auto px-8 py-16">
+              <img class="rounded-full w-20 h-20 ring-2 ring-indigo-400" src="/src/assets/headshot-cropped.jpg">
+              <div class="mt-1">
+                <h1 class="text-3xl font-extrabold text-slate-900 tracking-tight">
+                  Andrew Church
+                </h1>
+                <p class="text-base text-slate-700">
+                  Full Stack Developer. Development Manager. Web Problem Solver.
+                </p>
+                <ul class="flex items-center space-x-2 mt-2 text-xs text-indigo-600">
+                  <li>
+                    <a href="https://www.linkedin.com/in/andrewthewebguy/" class="after:content-['_↗'] transition-colors hover:text-indigo-400">
+                      LinkedIn
+                    </a>
+                  </li>
+                  <li>
+                    <a href="https://github.com/andrewchurch" class="after:content-['_↗'] transition-colors hover:text-indigo-400">
+                      GitHub
+                    </a>
+                  </li>
+                  <li>
+                    <a href="mailto:andrewchurch@gmail.com" class="transition-colors hover:text-indigo-400">
+                      andrewchurch@gmail.com                           
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </div>
           </div>
         </div>
+
+        <!-- Portfolio Panel -->
+        <div id="portfolio" class="bg-gray-100 flex min-content md:order-last md:min-h-screen"></div> 
+
+        <!-- Arcade Panel -->
+        <div id="arcade" class="bg-slate-500 text-zinc-100 flex max-content md:order-first md:h-screen"></div>
+
       </div>
-
-      <!-- Portfolio -->
-      <div id="portfolio" class="w-screen bg-gray-100 grow flex md:order-last md:min-h-screen md:w-1/2"></div> 
-
-      <!-- Arcade
-      <div id="arcade" class="w-screen bg-slate-500 grow text-zinc-100 md:h-screen md:w-1/2 flex"></div> -->
 
     </div>
 
