Minor CSS/responsive tweaks

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div class="md:overflow-x-clip">
       
       <!-- Panel Container -->
-      <div class="grid grid-rows-[auto,auto,minmax(25vh,1fr)] min-h-screen md:grid-rows-none md:transition-transform md:-translate-x-1/3 md:grid-cols-3 md:w-[150%]">
+      <div class="grid grid-rows-[repeat(2,auto),minmax(25vh,1fr)] min-h-screen md:grid-rows-none md:grid-cols-3 md:transition-transform md:-translate-x-1/3 md:w-[150%]">
 
         <!-- Colophon Panel -->
         <div id="colophon" class="relative min-content">
@@ -80,10 +80,10 @@
         </div>
 
         <!-- Portfolio Panel -->
-        <div id="portfolio" class="bg-gray-100 flex min-content md:order-last md:min-h-screen"></div> 
+        <div id="portfolio" class="bg-gray-100 flex md:order-last md:min-h-screen"></div> 
 
         <!-- Arcade Panel -->
-        <div id="arcade" class="bg-slate-500 text-zinc-100 flex max-content md:order-first md:h-screen"></div>
+        <div id="arcade" class="bg-slate-500 text-zinc-100 flex md:order-first md:h-screen"></div>
 
       </div>
 
