--- a/index.html
+++ b/index.html
@@ -2,8 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/globe-solid.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <meta name="theme-color" content="#ffffff">
+    <link rel="icon" href="/dude.svg">
+    <link rel="mask-icon" href="/dude.svg" color="#0F172A">
+    <link rel="apple-touch-icon" href="/dude.png">
+    <link rel="manifest" href="/manifest.json">
+    
     <title>Andrew, Web Guy</title>
 
     <!-- Google Tag Manager -->
