--- a/index.html
+++ b/index.html
@@ -12,6 +12,23 @@
     
     <title>Andrew, Web Guy</title>
 
+    <meta name="description" content="Personal website and professional portfolio of Andrew Church.">
+    <meta name=”robots” content="index, follow">
+    <link rel="canonical" href="https://andrewthewebguy.com/" />
+    
+    <meta property="og:type" content="article" />
+    <meta property="og:title" content="Andrew, Web Guy" />
+    <meta property="og:description" content="Personal website and professional portfolio of Andrew Church." />
+    <meta property="og:image" content="/dude-fb.png" />
+    <meta property="og:url" content="https://andrewthewebguy.com/" />
+    <meta property="og:site_name" content="Andrew, Web Guy" />
+
+    <meta name="twitter:title" content="Andrew, Web Guy">
+    <meta name="twitter:description" content="Personal website and professional portfolio of Andrew Church.">
+    <meta name="twitter:image" content="/dude-twit.png">
+    <meta name="twitter:site" content="@notjustahatrack">
+    <meta name="twitter:creator" content="@notjustahatrack">
+
     <!-- Google Tag Manager -->
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
     new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -39,7 +56,7 @@
         <div id="colophon" class="relative min-content">
           <div class="flex md:sticky md:h-screen md:top-0">
             <div class="m-auto px-8 py-16">
-              <img class="rounded-full w-20 h-20 ring-2 ring-indigo-400" src="/src/assets/images/headshot-cropped.jpg">
+              <img class="rounded-full w-20 h-20 ring-2 ring-indigo-400" src="/src/assets/images/headshot-cropped.jpg" alt="Headshot of Andrew">
               <div class="mt-1">
                 <h1 class="text-3xl font-extrabold text-slate-900 tracking-tight">
                   Andrew Church
