--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <div id="panelOverflow" class="snap-y overflow-y-auto h-screen md:snap-none md:overflow-x-clip">
       
       <!-- Panel Container -->
-      <div id="panelContainer" class="grid grid-rows-[repeat(3,minmax(50%,auto))] min-h-screen md:grid-rows-none md:grid-cols-3 md:transition-transform md:-translate-x-1/3 md:w-[150%]">
+      <div id="panelContainer" class="grid grid-rows-[repeat(3,minmax(50%,auto))] h-screen md:h-auto md:min-h-screen md:grid-rows-none md:grid-cols-3 md:transition-transform md:-translate-x-1/3 md:w-[150%]">
 
         <!-- Colophon Panel -->
         <div id="colophon" tabindex="0" class="relative snap-start md:snap-align-none">
