Adding mobile navigation buttons

--- a/index.html
+++ b/index.html
@@ -84,6 +84,8 @@
               </div>
             </div>
           </div>
+
+          <nav id="navigationMobile" class="absolute top-8 right-8 md:hidden"></nav>
         </div>
 
         <!-- Portfolio Panel -->
