--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     })(window,document,'script','dataLayer','GTM-KJPF9NXB');</script>
     <!-- End Google Tag Manager -->
   </head>
-  <body>
+  <body class="bg-gray-100">
     
     <!-- Google Tag Manager (noscript) -->
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KJPF9NXB"
@@ -53,7 +53,7 @@
       <div id="panelContainer" class="grid grid-rows-[repeat(3,minmax(50%,auto))] h-screen md:h-auto md:min-h-screen md:grid-rows-none md:grid-cols-3 md:transition-transform md:-translate-x-1/3 md:w-[150%]">
 
         <!-- Colophon Panel -->
-        <div id="colophon" tabindex="0" class="relative snap-start md:snap-align-none">
+        <div id="colophon" tabindex="0" class="bg-white relative snap-start md:snap-align-none">
           <div class="flex h-full md:sticky md:h-screen md:top-0">
             <div class="m-auto px-8 py-16">
               <img class="rounded-full w-20 h-20 ring-2 ring-indigo-400" src="/src/assets/images/headshot-cropped.jpg" alt="Headshot of Andrew">
@@ -89,7 +89,7 @@
         </div>
 
         <!-- Portfolio Panel -->
-        <div id="portfolio" class="bg-gray-100 flex order-last snap-start md:snap-align-none md:min-h-screen"></div> 
+        <div id="portfolio" class="bg-gray-100 flex order-last md:min-h-screen"></div> 
 
         <!-- Arcade Panel -->
         <div id="arcade" class="bg-slate-500 text-zinc-100 flex order-first snap-start md:snap-align-none md:h-screen"></div>
