--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <div id="portfolio" class="bg-gray-100 flex order-last md:min-h-screen"></div> 
 
         <!-- Arcade Panel -->
-        <div id="arcade" class="bg-slate-500 text-zinc-100 flex order-first snap-start md:z-20 md:snap-align-none md:top-0 md:sticky md:h-screen"></div>
+        <div id="arcade" class="bg-slate-500 text-zinc-100 flex order-first snap-start overflow-hidden md:z-20 md:snap-align-none md:top-0 md:sticky md:h-screen"></div>
 
       </div>
 
