--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       
       <!-- Panel Container -->
       <!-- <div id="panelContainer" class="grid grid-rows-[repeat(3,minmax(50%,auto))] h-screen md:h-auto md:min-h-screen md:grid-rows-none md:grid-cols-3 md:transition-transform md:-translate-x-1/3 md:w-[150%]"> -->
-      <div id="panelContainer" class="grid grid-rows-[repeat(3,minmax(50%,auto))] h-screen md:h-auto md:min-h-screen md:grid-rows-none md:grid-cols-3 md:w-[150%]">
+      <div id="panelContainer" class="grid grid-rows-[minmax(100%,auto),repeat(2,minmax(50%,auto))] h-screen md:h-auto md:min-h-screen md:grid-rows-none md:grid-cols-3 md:w-[150%]">
 
         <!-- Colophon Panel -->
         <div id="colophon" tabindex="0" class="bg-white relative snap-start md:snap-align-none">
