--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3DXC5NW4EW"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-3DXC5NW4EW');
+    </script>
+
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
@@ -28,22 +38,9 @@
     <meta name="twitter:image" content="/dude-twit.png">
     <meta name="twitter:site" content="@notjustahatrack">
     <meta name="twitter:creator" content="@notjustahatrack">
-
-    <!-- Google Tag Manager -->
-    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-KJPF9NXB');</script>
-    <!-- End Google Tag Manager -->
   </head>
   <body class="bg-gray-100">
-    
-    <!-- Google Tag Manager (noscript) -->
-    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KJPF9NXB"
-    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-    <!-- End Google Tag Manager (noscript) -->
-
+  
     <nav id="navigation" class="hidden fixed w-full p-8 z-10 md:block"></nav>
 
     <!-- Panel Overflow -->
@@ -57,7 +54,7 @@
         <div id="colophon" tabindex="0" class="bg-white relative snap-start md:snap-align-none">
           <div class="flex h-full md:sticky md:h-screen md:top-0">
             <div class="m-auto px-8 py-16">
-              <img class="rounded-full w-20 h-20 ring-2 ring-indigo-400" src="/src/assets/images/headshot-cropped.jpg" alt="Headshot of Andrew" width="80" height="80">
+              <img class="rounded-full w-20 h-20 ring-2 ring-indigo-400" src="/src/assets/images/headshot_cropped_1_1x.webp" alt="Headshot of Andrew" width="80" height="80">
               <div class="mt-1">
                 <h1 class="text-3xl font-extrabold text-slate-900 tracking-tight">
                   Andrew Church
