--- a/index.html
+++ b/index.html
@@ -40,62 +40,7 @@
     <meta name="twitter:creator" content="@notjustahatrack">
   </head>
   <body class="bg-gray-100">
-  
-    <nav id="navigation" class="hidden fixed w-full p-8 z-10 md:block"></nav>
-
-    <!-- Panel Overflow -->
-    <div id="panelOverflow" class="snap-y overflow-y-auto h-screen md:snap-none md:overflow-x-clip">
-      
-      <!-- Panel Container -->
-      <!-- <div id="panelContainer" class="grid grid-rows-[repeat(3,minmax(50%,auto))] h-screen md:h-auto md:min-h-screen md:grid-rows-none md:grid-cols-3 md:transition-transform md:-translate-x-1/3 md:w-[150%]"> -->
-      <div id="panelContainer" class="grid grid-rows-[minmax(100%,auto),repeat(2,minmax(50%,auto))] h-screen md:h-auto md:min-h-screen md:grid-rows-none md:grid-cols-3 md:w-[150%]">
-
-        <!-- Colophon Panel -->
-        <div id="colophon" tabindex="0" class="bg-white relative snap-start md:snap-align-none">
-          <div class="flex h-full md:sticky md:h-screen md:top-0">
-            <div class="m-auto px-8 py-16">
-              <img class="rounded-full w-20 h-20 ring-2 ring-indigo-400" src="/src/assets/images/headshot_square_optimized.webp" alt="Headshot of Andrew" width="80" height="80">
-              <div class="mt-1">
-                <h1 class="text-3xl font-extrabold text-slate-900 tracking-tight">
-                  Andrew Church
-                </h1>
-                <p class="text-base text-slate-700">
-                  Full Stack Developer. Development Manager. Web Problem Solver.
-                </p>
-                <ul class="flex items-center space-x-2 mt-2 text-xs text-indigo-600">
-                  <li>
-                    <a href="https://www.linkedin.com/in/andrewthewebguy/" class="after:content-['_↗'] transition-colors hover:text-indigo-400">
-                      LinkedIn
-                    </a>
-                  </li>
-                  <li>
-                    <a href="https://github.com/andrewchurch" class="after:content-['_↗'] transition-colors hover:text-indigo-400">
-                      GitHub
-                    </a>
-                  </li>
-                  <li>
-                    <a href="mailto:andrewchurch@gmail.com" class="transition-colors hover:text-indigo-400">
-                      andrewchurch@gmail.com                           
-                    </a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </div>
-
-          <nav id="navigationMobile" class="absolute top-8 right-8 md:hidden"></nav>
-        </div>
-
-        <!-- Portfolio Panel -->
-        <div id="portfolio" class="bg-gray-100 flex order-last md:min-h-screen"></div> 
-
-        <!-- Arcade Panel -->
-        <div id="arcade" class="bg-slate-500 text-white flex order-first snap-start overflow-hidden md:z-20 md:snap-align-none md:top-0 md:sticky md:h-screen"></div>
-
-      </div>
-
-    </div>
-
+    <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
